--- a/src/views/core/components/thread.njk
+++ b/src/views/core/components/thread.njk
@@ -1,21 +1,37 @@
 {% macro reply(reply) %}
-    <div class="reply">
+    <div class="reply" id="p{{ reply.no }}">
         {% if reply.filename %}
             <img src="/img/{{ board.board }}/{{ reply.tim }}{{ reply.ext }}" height="250px" />
         {% endif %}
 
-        {% if reply.sub %}<b>{{ reply.sub }}</b>&nbsp;{% endif %}<b style="color:green">{{ reply.name }}</b>&nbsp;<span>{{ reply.time | formatDate }}</span>&nbsp;<span>No. {{ reply.no }}</span>
+        <div class="post-header">
+            {% if reply.sub %}<b>{{ reply.sub }}</b>&nbsp;{% endif %}<b style="color:green">{{ reply.name }}</b>&nbsp;<span>{{ reply.time | formatDate }}</span>&nbsp;<span>No. {{ reply.no }}</span>
+        
+            {% for postReplyNo in reply.replies %}
+                <a href="#p{{ postReplyNo }}" class="quotelink">&gt;&gt;{{ postReplyNo }}</a>
+            {% endfor %}
+        </div>
+        
         <p>{{ reply.com }}</p>
+
+        
     </div>
 {% endmacro %}
 
 {% macro thread(thread, showLink=true) %}
-    <div class="thread">
+    <div class="thread" id="p{{ thread.no }}">
         {% if thread.filename %}
             <img src="/img/{{ board.board }}/{{ thread.tim }}{{ thread.ext }}" height="250px" />
         {% endif %}
 
-        {% if thread.sub %}<b>{{ thread.sub }}</b>&nbsp;{% endif %}<b style="color:green">{{ thread.name }}</b>&nbsp;<span>{{ thread.time | formatDate }}</span>&nbsp;<span>No. {{ thread.no }}</span>
+        <div class="post-header">
+            {% if thread.sub %}<b>{{ thread.sub }}</b>&nbsp;{% endif %}<b style="color:green">{{ thread.name }}</b>&nbsp;<span>{{ thread.time | formatDate }}</span>&nbsp;<span>No. {{ thread.no }}</span>
+        
+            {% for postReplyNo in thread.replies %}
+                <a href="#p{{ postReplyNo }}" class="quotelink">&gt;&gt;{{ postReplyNo }}</a>
+            {% endfor %}
+        </div>
+
         <p>{{ thread.com }}</p>
 
         {% if showLink == true %}
