--- a/src/views/core/components/thread.njk
+++ b/src/views/core/components/thread.njk
@@ -3,18 +3,18 @@
     <label for="media-{{ post.tim }}" class="toggle-label">
 
     {% if post.ext == ".webm" %}
-            <img src="/static/{{ board.board }}/{{ post.tim }}s.jpg" height="{{ post.tn_h }}px" width="{{ post.tn_w }}px" />
+            <img class="post-image" src="/static/{{ board.board }}/{{ post.tim }}s.jpg" height="{{ post.tn_h }}px" width="{{ post.tn_w }}px" />
         </label>
 
         <div class="toggle-container">
             <video src="/static/{{ board.board }}/{{ post.tim }}{{ post.ext }}" style="width: {{ post.w }}px; height: {{ post.h }}px;" controls loop preload="none" loading="lazy">
         </div>
     {% else %}
-            <img src="/static/{{ board.board }}/{{ post.tim }}{{ post.ext }}" height="{{ post.tn_h }}" width="{{ post.tn_w }}" />
+            <img class="post-image" src="/static/{{ board.board }}/{{ post.tim }}{{ post.ext }}" height="{{ post.tn_h }}" width="{{ post.tn_w }}" />
         </label>
 
         <div class="toggle-container">
-            <img src="/static/{{ board.board }}/{{ post.tim }}{{ post.ext }}" height="{{ post.h }}" width="{{ post.w }}" />
+            <img class="post-image" src="/static/{{ board.board }}/{{ post.tim }}{{ post.ext }}" height="{{ post.h }}" width="{{ post.w }}" />
         </div>
     {% endif %}
 {% endmacro %}
